<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/faq"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryGrey"
    android:orientation="vertical">


    <TextView
        android:id="@+id/faq_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/faq_title"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/faq_q1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/faq_q1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/faq_a1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/faq_a1"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/faq_q2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/faq_q2"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/faq_a2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/faq_a2"
        android:textSize="16sp" />
</LinearLayout>