<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@drawable/alarms_list_item_border"
    android:gravity="center_vertical"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alarms_list_row_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/replaceTime"
                android:textColor="@color/alarmTimeTextColor"
                android:textSize="45sp" />

            <TextView
                android:id="@+id/alarms_list_row_time_ampm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/replaceAMPM"
                android:textColor="@color/alarmTimeTextColor"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/alarms_list_row_days_of_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/replaceRepeat"
            android:textColor="@color/alarmTimeTextColor"
            android:textSize="15sp" />
    </LinearLayout>

    <Switch
        android:id="@+id/alarmSetToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:backgroundTint="@color/primaryYellow"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:paddingEnd="20dp"
        android:scaleX="1.2"
        android:scaleY="1.2"
        android:textOff=""
        android:textOn="" />

</RelativeLayout>