<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryGrey"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/timer_tv_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/timer_hour"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp" />

            <NumberPicker
                android:id="@+id/np_timer_hour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginRight="10dp"
                android:descendantFocusability="blocksDescendants"
                android:fadingEdge="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="70dp"
                android:gravity="center"
                android:text="@string/timer_minute"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp" />

            <NumberPicker
                android:id="@+id/np_timer_minute"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="70dp"
                android:descendantFocusability="blocksDescendants"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" />
        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/label_Ineractivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/detailed_alarm_category_horizontal_margin"
        android:layout_marginTop="10dp"
        android:text="@string/detailed_label_interactivity"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/detailed_alarm_category_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/detailed_alarm_sub_category_horizontal_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_intensity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailed_intensity"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/detailed_alarm_sub_category_size" />

        <TextView
            android:id="@+id/tv_timer_intensity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initSBValue"
            android:textColor="@color/primaryTextColor"
            android:textSize="16sp" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/sb_timer_intensity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/detailed_alarm_sub_category_horizontal_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/detailed_alarm_sub_category_horizontal_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/label_seqLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detailed_seqLength"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/detailed_alarm_sub_category_size" />

        <TextView
            android:id="@+id/tv_timer_seqLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initSBValue"
            android:textColor="@color/primaryTextColor"
            android:textSize="16sp" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/sb_timer_seqLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/detailed_alarm_sub_category_horizontal_margin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bt_timer_start"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/buttonBottomOffset"
            android:layout_marginLeft="@dimen/buttonLeftRightOffset"
            android:layout_marginRight="@dimen/buttonLeftRightOffset"
            android:background="@drawable/button_border"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/timer_start"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/buttonTextSize" />
    </LinearLayout>

</LinearLayout>