<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/more_base_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryGrey"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_stopwatch_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/stopwatch_initTime"
            android:textColor="@color/primaryYellow"
            android:textSize="50sp" />

    </LinearLayout>

    <LinearLayout

        android:id="@+id/stopwatch_mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_stopwatch_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/buttonBottomOffset"
            android:layout_marginLeft="@dimen/buttonLeftRightOffset"
            android:layout_marginRight="@dimen/buttonLeftRightOffset"
            android:background="@drawable/button_border"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/timer_start"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/buttonTextSize" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/stopwatch_secondaryLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_stopwatch_reset"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/buttonBottomOffset"
            android:layout_marginLeft="@dimen/buttonLeftRightOffset"
            android:layout_marginRight="@dimen/buttonLeftRightOffset"
            android:layout_weight=".5"
            android:background="@drawable/button_border"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/stopwatch_reset"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/buttonTextSize" />

    </LinearLayout>
</LinearLayout>